<resources>
    <string name="app_name">Maskology</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_camera">Camera</string>
    <string name="title_nav_education">Education</string>
    <string name="img_product">img_product</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="name_ecommerce">Name Ecommerce</string>
    <string name="address_ecommerce">address ecommerce</string>
    <string name="call_seller">Hubungi Penjual</string>
    <string name="desc_ecommerce">Lorem ipsum dolor sit amet, consectetur adipiscing elit  sed do eiusmod tempor incididunt ut labor</string>
    <string name="name_product">Name Product</string>
    <string name="writter_name">Writter Name</string>
    <string name="year_article">Year Article</string>
    <string name="story_product">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna .....</string>
    <string name="products">Products</string>
    <string name="price">Price</string>
    <string name="seller">Seller</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name Product Name</string>
    <string name="store_name">Store Name</string>
    <string name="title_news">Title News</string>
    <string name="news_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit .....</string>
    <string name="category">Category</string>
    <string name="mask_name">Mask Name</string>
    <string name="mask_story_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna .....</string>
    <string name="new_products">New Products</string>
    <string name="hint_search_home">What are you looking for today?</string>
    <string name="hint_search_education">What do you want to learn today?</string>
    <string name="mask_story_title">Mask Story</string>
    <string name="stock">Stock:</string>
    <string name="dummy_price">Rp.999.999</string>
    <string name="dummy_stock">999999</string>
    <string name="description">Description</string>
    <string name="dummy_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_phone_number">088888888</string>
    <string name="store">Store</string>
    <string name="cantact_store">Contact Store</string>
    <string name="title_nav_favorite">Favorite</string>
    <string name="title_nav_profile">Profile</string>
    <string name="title_related_products">Related Products</string>
    <string name="name_user">Name User</string>
    <string name="sign_out">Sign Out</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="retry">Retry</string>
    <string name="no_connection_message">Connection Failed, please check your internet connection</string>
    <string name="copyright">Maskology 2022</string>
    <string name="share">Share</string>
    <string name="news">News</string>
    <string name="fun_fact">Fun Fact</string>
    <string name="title_on_boarding_1">Title 1</string>
    <string name="title_on_boarding_2">Title 2</string>
    <string name="title_on_boarding_3">Title 3</string>
    <string name="desc_on_boarding_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="desc_on_boarding_2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="desc_on_boarding_3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="under_develope_page">This page is under develop</string>
    <string name="upload">Do you want to upload it?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>