<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/description_product_layout">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_price"
        android:transitionName="price"
        style="@style/TextStyle.LargePrice"
        android:layout_width="0dp"
        android:text="@string/dummy_price"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_stock"
        style="@style/TextStyle.Description"
        android:layout_width="wrap_content"
        android:text="@string/stock"
        app:layout_constraintStart_toStartOf="@+id/tv_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_stock"
        style="@style/TextStyle.Description"
        android:layout_width="0dp"
        android:text="@string/dummy_stock"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_title_stock"
        app:layout_constraintTop_toTopOf="@+id/tv_title_stock" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_description"
        style="@style/TextStyle.SubHeader"
        android:layout_width="0dp"
        android:text="@string/description"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_stock" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        style="@style/TextStyle.Description"
        android:layout_width="0dp"
        android:text="@string/dummy_description"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_description"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_Store"
        style="@style/TextStyle.SubHeader"
        android:layout_width="0dp"
        android:text="@string/store"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_Store">

        <include
            android:id="@+id/mini_profile_layout"
            layout="@layout/mini_store_profile_layout" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>