<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageCapture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/dummy_4"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textView"
        style="@style/TextStyle.Header.Dark"
        android:text="@string/upload"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonSolid"
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            style="@style/ButtonSolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="20dp"/>


    </LinearLayout>




</LinearLayout>