<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/description_product_layout">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_writer_name"
        style="@style/TextStyle.Header.Dark"
        android:layout_width="0dp"
        android:text="@string/writter_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_year"
        style="@style/TextStyle.Description"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/year_article"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_writer_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_description"
        style="@style/TextStyle.SubHeader"
        android:layout_width="0dp"
        android:text="@string/mask_story_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_year" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        style="@style/TextStyle.Description"
        android:layout_width="0dp"
        android:text="@string/dummy_description"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_description"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_Store"
        style="@style/TextStyle.SubHeader"
        android:layout_width="0dp"
        android:text="@string/title_related_products"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_related_product"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_Store"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/item_small_product" />

</androidx.constraintlayout.widget.ConstraintLayout>