<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_story_mask"
    style="@style/Contentbar">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_mask"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dummy_4"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/title_background"
        app:layout_collapseMode="parallax"
        app:layout_constraintBottom_toBottomOf="@id/img_mask"
        app:layout_constraintEnd_toEndOf="@+id/img_mask"
        app:layout_constraintStart_toStartOf="@+id/img_mask" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_ecommerce"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/dummy_2"
        android:layout_marginTop="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_mask"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_ecommerce_name"
        style="@style/TextStyle.Header.Dark"
        android:layout_width="0dp"
        android:text="@string/name_ecommerce"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_ecommerce" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_ecommerce_address"
        style="@style/TextStyle.SubTitle"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/address_ecommerce"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ecommerce_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/cantact_store"
        android:textAllCaps="false"
        android:textAppearance="@style/TextStyle.SubTitle"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        style="@style/TextStyle.Description"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/dummy_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ecommerce_address" />
</androidx.constraintlayout.widget.ConstraintLayout>