<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_small_product"
    style="@style/CardViewSmallProduct"
    app:cardElevation="8dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="96.21dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            style="@style/BackgroundTextView"
            app:layout_constraintBottom_toBottomOf="@+id/img_product"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_product_price"
                style="@style/TextStyle.SmallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="12dp"
                android:text="@string/product_price"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_name"
            style="@style/TextStyle.SubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="@+id/img_product"
            app:layout_constraintStart_toStartOf="@+id/img_product"
            app:layout_constraintTop_toBottomOf="@+id/img_product" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_store_name"
            style="@style/TextStyle.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            android:text="@string/store_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_product"
            app:layout_constraintStart_toStartOf="@+id/img_product"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

        
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>